# libbeanstalkclient

./: .gitignore  COPYING  Doxyfile  INSTALL  Makefile  Makefile.am  Makefile.orig  README  configure.ac
examples/: bsc_reconnect_handler  bsc_reconnect_handler.c
src/: Makefile.am  arrayqueue.h  beanstalkclient.c  beanstalkclient.h  beanstalkproto.c  beanstalkproto.h  cbq.c  cbq.h  evbsc.c  evbsc.h  evbuffer.c  evbuffer.h  evvector.c  evvector.h  ioqueue.c  ioqueue.h  ivector.c  ivector.h  sockutils.c  sockutils.h
tests/: .gitignore  Makefile.am  check_bsc.c  check_commands.c  check_evbsc.c  check_evbuffer.c  check_evvector.c  check_ioqueue.c  check_ivector.c  check_responses.c  check_stats.c
tests/response_samples/: list-tubes.response  stats-job.response  stats-tube.response  stats.response
